--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^3.2.1",
     "cross-var": "^1.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -54,6 +57,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
