--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  app:
+    build:
+      context: .
+    ports:
+      - "8888:3000"
+    env_file:
+      - .env
+    volumes:
+      - ./backend:/app
+      - /absolute/path/to/app/node_modules:/app/node_modules
+    restart: on-failure
+    command: >
+      sh -c 'nest start --watch'
+
   first-project-postgres:
     image: postgres:16.1
     ports:
@@ -9,8 +23,11 @@ services:
       POSTGRES_USER: '${POSTGRES_USER:-user}'
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD:-password}'
       POSTGRES_DB: '${POSTGRES_DB:-first-project}'
+    env_file:
+      - .env
     volumes:
-      - first-project-api-db:/var/lib/postgresql/project-name
+      - first-project-api-db:/var/lib/postgresql/first-project
+    restart: on-failure
 
   first-project-redis:
     image: redis:7.2.3
@@ -30,6 +47,15 @@ services:
     environment:
       - MINIO_ROOT_USER=user
       - MINIO_ROOT_PASSWORD=password
+
+  web:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./client:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: on-failure
 
 volumes:
   first-project-api-db:
