--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "migration:run": "npm run typeorm -- migration:run"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -43,6 +44,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
@@ -56,6 +58,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.0",
