--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,6 @@ root /usr/share/nginx/html;
 location / {
 try_files $uri$args $uri$args/ /index.html;
 }
-location /api/{
-proxy_pass http://app:3000/;
+location /api/ {
+proxy_pass http://localhost:3001/;}
 }
