--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,16 @@ POSTGRES_NAME=
 
 REDIS_HOST=
 REDIS_PORT=
+
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+JWT_ACCESS_SECRET=
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_SECRET=
+JWT_REFRESH_EXPIRES_IN=
+AWS_S3_BUCKET_NAME=
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_S3_REGION=
+AWS_S3_ACL=
+AWS_S3_ENDPOINT=
