--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3.8'
+
 
 services:
   app:
     build:
       context: .
     ports:
-      - "8888:3000"
+      - "3500:3001"
     env_file:
       - .env
     volumes:
-      - ./backend:/app
-      - /absolute/path/to/app/node_modules:/app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     restart: on-failure
     command: >
-      sh -c 'nest start --watch'
+      sh -c "npm run start"
 
   first-project-postgres:
     image: postgres:16.1
